# Triangulation

./: CMakeLists.txt
Assets/: Shader.glsl
Triangulation/: Main.cpp
Triangulation/Window/: Window.cpp  WindowSettings.h
